worked on spacing issues

--- a/sampleweatherapp-react/src/App.css
+++ b/sampleweatherapp-react/src/App.css
@@ -59,13 +59,15 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  padding-top: 125px;
   z-index: 1000;
 }
 
 .popup-box {
   background-color: #fff;
-  padding: 20px;
+  padding: 5px;
+  padding-bottom: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   max-width: 400px;
